# DINOv3-demo

./: README.md  main.py  pyproject.toml
